[project]
name = "ml-interview"
version = "0.1.0"
description = "ML Interview Preparation - A 10-week Obsidian vault curriculum"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "PyJWT>=2.8.0",
]

[project.scripts]
ml-interview = "ml_interview:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_interview"]

[dependency-groups]
dev = []
