[project]
name = "ml-interview"
version = "0.1.0"
description = "ML Interview Preparation - A 10-week Obsidian vault curriculum"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",  # Keep for Alembic sync migrations
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "PyJWT>=2.8.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",  # Required for async SQLAlchemy
]

[project.scripts]
ml-interview = "ml_interview:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_interview"]

[dependency-groups]
dev = []
